--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Offline PDF-to-Test Maker</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Convert PDFs to tests offline instantly with our powerful and easy-to-use PDF-to-Test Maker. No internet required!" />
+    <meta name="keywords" content="PDF to test, offline PDF converter, test maker, quiz generator, PDF tool" />
+    <meta name="author" content="Your Company or Name" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Offline PDF-to-Test Maker" />
+    <meta property="og:description" content="Instantly convert PDFs into tests offline. Create quizzes and exams from your documents with ease." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Offline PDF-to-Test Maker" />
+    <meta name="twitter:description" content="Easily generate tests and quizzes from PDFs without needing internet access." />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com" />
   </head>
   <body>
     <div id="root"></div>
